--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -52,11 +52,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: 'npm'
+          cache: 'yarn'  # Alterado para cache do Yarn
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile  # Equivalente ao npm ci
       - name: Build
-        run: npm run build
+        run: yarn build  # Substitui npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
