--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,28 +1,20 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+name: Deploy Jekyll with GitHub Pages using Yarn
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -35,10 +27,12 @@ jobs:
         with:
           source: ./
           destination: ./_site
-      - name: Upload artifact
+      - name: Upload Jekyll artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          name: jekyll-site # Nome único para o artefato Jekyll
+          path: ./_site
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
@@ -52,17 +46,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: 'yarn'  # Alterado para cache do Yarn
+          cache: 'yarn'
       - name: Install dependencies
-        run: yarn install --frozen-lockfile  # Equivalente ao npm ci
+        run: yarn install --frozen-lockfile
       - name: Build
-        run: yarn build  # Substitui npm run build
+        run: yarn build
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Upload artifact
+      - name: Upload build artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
+          name: static-site # Nome único para o artefato de build
           path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
