--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@mantine/spotlight": "^8.1.2",
     "@mantine/tiptap": "^8.1.2",
     "@tabler/icons-react": "^3.34.0",
+    "@tanstack/react-query": "^5.83.0",
     "@tiptap/extension-link": "^2.24.2",
     "@tiptap/pm": "^2.24.2",
     "@tiptap/react": "^2.24.2",
     "@tiptap/starter-kit": "^2.24.2",
+    "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "embla-carousel": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "openai": "^5.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
